<resources>
    <string name="app_name">Everything-Pets</string>
    <string name="txt_home">Home</string>
    <string name="txt_dogs">Dogs</string>
    <string name="txt_cats">Cats</string>
    <string name="txt_home_title">Welcome to Everything-Pets!</string>
    <string name="txt_home_guide">Here, you\'ll be able to find everything about dogs and cats. You can also create a profile for your own pet.</string>
    <string name="txt_error_title">An error has occurred.</string>
    <string name="txt_breed">Yorkshire Terrier</string>
    <string name="txt_generate_new_image">Generate new Image</string>
    <string name="txt_i_have_one">I have one!</string>
    <string name="txt_bred_for">BRED FOR:</string>
    <string name="txt_breed_group">BREED GROUP:</string>
    <string name="txt_life_span">LIFE SPAN:</string>
    <string name="txt_temperament">TEMPERAMENT:</string>
    <string name="txt_weight">WEIGHT:</string>
    <string name="txt_height">HEIGHT:</string>
    <string name="txt_natural">NATURAL:</string>
    <string name="txt_lap">LAP:</string>
    <string name="txt_hairless">HAIRLESS:</string>
    <string name="txt_your_pets">Your Pets</string>
    <string name="txt_name_input_title_ex">What\'s the name of your Yorkshire Terrier?</string>
    <string name="txt_name_input_title">What\'s the name of your %1$s?</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_ex_pet_name">Ex.: Chico</string>
    <string name="txt_name_info">Name:</string>
    <string name="txt_breed_info">Breed:</string>
    <string name="txt_photo_input_title">And how does he/she look like?</string>
    <string name="txt_choose_photo">Choose Photo</string>
    <string name="txt_breed_details">Breed Details</string>
    <string name="txt_dog_breed_details">Dog Breed Details</string>
    <string name="txt_cat_breed_details">Cat Breed Details</string>
</resources>