<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lighter_base_color"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_breed_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:textStyle="bold"
        android:textColor="@color/darker_base_color_2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/txt_breed" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_pet_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="8dp"
        android:layout_marginTop="10dp"
        android:background="@color/base_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_breed_name"
        tools:srcCompat="@drawable/ex_dog" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_pet_image"
        app:layout_constraintEnd_toEndOf="@id/iv_pet_image"
        app:layout_constraintStart_toStartOf="@id/iv_pet_image">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_new_image"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/base_color"
            android:text="@string/txt_generate_new_image"
            android:layout_marginTop="10dp"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/mb_add_pet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_add_pet"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:text="@string/txt_i_have_one"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="20"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/base_color"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/mb_new_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_breed_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cl_buttons"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="10sp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_first_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/txt_bred_for"
                android:textStyle="bold"
                android:paddingVertical="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_second_info_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_first_info"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_second_info_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Small vermin hunting" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_second_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/txt_breed_group"
                android:textStyle="bold"
                android:paddingVertical="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_life_span_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_info" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_second_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toTopOf="@id/tv_life_span_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_info"
                tools:text="Toy" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_life_span_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_life_span"
                android:paddingVertical="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_temperament_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_info" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_life_span"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toTopOf="@id/tv_temperament_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_info"
                tools:text="12 - 16 years" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_temperament_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_temperament"
                android:textStyle="bold"
                android:paddingVertical="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_fifth_info_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_life_span" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_temperament"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:paddingVertical="15dp"
                tools:text="Bold, Independent, Confident, Intelligent, Courageous"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_fifth_info_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_life_span" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fifth_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/txt_height"
                android:textStyle="bold"
                android:paddingVertical="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_weight_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperament" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_fifth_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toTopOf="@id/tv_weight_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperament"
                tools:text="20 - 23 cm" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_weight"
                android:textStyle="bold"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fifth_info" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fifth_info"
                tools:text="2 - 3 kg" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>