<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_pet_type"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@drawable/ic_dog"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_pet_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="10dp"
            android:background="@color/base_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@drawable/ex_dog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pet_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:text="@string/txt_name_info"
            app:layout_constraintTop_toBottomOf="@id/iv_pet_type"
            app:layout_constraintStart_toEndOf="@+id/iv_pet_image"
            app:layout_constraintBottom_toTopOf="@id/tv_breed_name_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pet_name"
            android:layout_width="0dp"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/iv_pet_type"
            app:layout_constraintStart_toEndOf="@+id/tv_pet_name_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_breed_name_title"
            tools:text="Nikita" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_breed_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/txt_breed_info"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_pet_name"
            app:layout_constraintStart_toEndOf="@+id/iv_pet_image"
            app:layout_constraintBottom_toTopOf="@id/iv_delete_pet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_breed_name"
            android:layout_width="0dp"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/tv_pet_name"
            app:layout_constraintStart_toEndOf="@+id/tv_breed_name_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_delete_pet"
            tools:text="@string/txt_breed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_delete_pet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_remove"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>